code cleanup for moving to IntelliJ